Add ability to filter by distance